<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.todo.presentation.feature.addtask.AddTaskViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_addTask_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_addTask_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.title}"
                android:onTextChanged="@{viewModel::onTextChanged}"
                android:hint="@string/addTask_title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_addTask_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInput_addTask_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_addTask_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.description}"
                android:hint="@string/addTask_description" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView_addTask_priority"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/addTask_priority"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_addTask_description" />

        <RadioGroup
            android:id="@+id/radioGroup_addTask_priority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onCheckedChanged="@{viewModel::onCheckedChanged}"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_addTask_priority">

            <RadioButton
                android:id="@+id/radioButton_addTask_priorityHigh"
                style="@style/radioButton"
                android:checked="true"
                android:text="@string/addTask_high"
                android:theme="@style/radioButtonPriorityHigh"
                app:layout_constraintLeft_toLeftOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <RadioButton
                android:id="@+id/radioButton_addTask_priorityMedium"
                style="@style/radioButton"
                android:text="@string/addTask_medium"
                android:theme="@style/radioButtonPriorityMedium"
                app:layout_constraintBottom_toTopOf="@+id/radioButton_addTask_priorityHigh"
                app:layout_constraintLeft_toRightOf="@+id/radioButton_addTask_priorityHigh"
                app:layout_constraintTop_toBottomOf="@+id/radioButton_addTask_priorityHigh" />

            <RadioButton
                android:id="@+id/radioButton_addTask_priorityLow"
                style="@style/radioButton"
                android:text="@string/addTask_low"
                android:theme="@style/radioButtonPriorityLow"
                app:layout_constraintBottom_toTopOf="@+id/radioButton_addTask_priorityMedium"
                app:layout_constraintLeft_toRightOf="@+id/radioButton_addTask_priorityMedium"
                app:layout_constraintTop_toBottomOf="@+id/radioButton_addTask_priorityMedium" />
        </RadioGroup>

        <Button
            android:id="@+id/button_addTask_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/materialRed"
            android:onClick="@{viewModel::submit}"
            android:text="@string/addTask_add"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_addTask_priority" />

    </android.support.constraint.ConstraintLayout>
</layout>